--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                         <div class="about__data">
                             <div class="about__info">
                                <p class="about__description">
-                                Frontend developer, I create web pages with UI / UX user int
-                                I have years of experience and many clients are happy
-                               with the projects carried out.
+                                Quo vero fugit temporibus quidem est eum. Aut nobis ut qui ullam quaerat odit laborum omnis.
+                                Eos neque fugiat nobis quia sunt temporibus nihil. Pariatur tenetur enim eius. 
+                                Ipsa reiciendis alias quisquam earum. Maiores recusandae eius et quis nulla distinctio libero earum.
                                </p>
 
                                <a href="#contact" class="button">Contact Me</a>
