Minor Style Edits

--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
                         <div class="about__data">
                             <div class="about__info">
                                <p class="about__description">
-                                Quo vero fugit temporibus quidem est eum. Aut nobis ut qui ullam quaerat odit laborum omnis.
-                                Eos neque fugiat nobis quia sunt temporibus nihil. Pariatur tenetur enim eius. 
-                                Ipsa reiciendis alias quisquam earum. Maiores recusandae eius et quis nulla distinctio libero earum.
+                                Quo vero fugit temporibus quidem est eum. 
+                                Aut nobis ut qui ullam quaerat odit laborum omnis. 
+                                Eos neque fugiat nobis quia sunt temporibus nihil. 
+                                Pariatur tenetur enim eius. 
                                </p>
 
                                <a href="#contact" class="button">Contact Me</a>
