--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="home__data">
                         <span class="home__greeting">Hello, my name is</span>
                         <h1 class="home__name"><span class="home__emoji">📈</span> Ivars Levans <span class="home__emoji">📈</span></h1>
-                        <h3 class="home__education">Blockchain Developer</h3>
+                        <h3 class="home__education">Software Developer</h3>
 
                         <div class="home__buttons">
                             <a href="assets/pdf/CV.pdf" class="button button--ghost">
