--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                                     <div>
                                         <h3 class="skills__name">HTML</h3>
-                                        <span class="skills__level">Advance</span>
+                                        <span class="skills__level">Advanced</span>
                                     </div>
                                 </div>
 
@@ -177,7 +177,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">SASS</h3>
+                                        <h3 class="skills__name">TypeScript</h3>
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
@@ -201,7 +201,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">PHP</h3>
+                                        <h3 class="skills__name">Solidity</h3>
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
@@ -223,6 +223,8 @@
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
+
+                                
                             </div>
                             <div class="skills__group">
                                 <div class="skills__data">
@@ -237,7 +239,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">JAVA</h3>
+                                        <h3 class="skills__name">C#</h3>
                                         <span class="skills__level">Advanced</span>
                                     </div>
                                 </div>
