--- a/index.html
+++ b/index.html
@@ -343,19 +343,19 @@
                     <div class="contact__content">
                         <h3 class="contact__title">Tell me your story</h3>
 
-                        <form action="" class="contact__form">
+                        <form action="contact.php" class="contact__form">
                             <div class="contact__form-div">
-                                <label for="" class="contact__form-tag">Name</label>
+                                <label for="name" class="contact__form-tag">Name</label>
                                 <input type="text" placeholder="Insert your name" spellcheck="false" class="contact__form-input">
                             </div>
 
                             <div class="contact__form-div">
-                                <label for="" class="contact__form-tag">Email</label>
+                                <label for="email" class="contact__form-tag">Email</label>
                                 <input type="email" placeholder="Insert your email" spellcheck="false" class="contact__form-input">
                             </div>
 
                             <div class="contact__form-div contact__form-area">
-                                <label for="" class="contact__form-tag">Message</label>
+                                <label for="message" class="contact__form-tag">Message</label>
                                 <textarea name="" id="" cols="30" rows="10" placeholder="Write your message" class="contact__form-input"></textarea>
                             </div>
 
